# substrate-rs

./: Cargo.toml
resources/shaders/: diffuse-instanced.vert.glsl  diffuse-shadow-instanced.frag.glsl  diffuse-shadow-instanced.vert.glsl  diffuse-shadow.frag.glsl  diffuse-shadow.vert.glsl  diffuse.frag.glsl  diffuse.vert.glsl  image.frag.glsl  image.vert.glsl  shadow-instanced.frag.glsl  shadow-instanced.vert.glsl  shadow.vert.glsl  solid.frag.glsl  solid.vert.glsl
src/: camera.rs  colors.rs  common.rs  loader.rs  main.rs  physics.rs  rendering.rs
src/support/: mod.rs
