[package]
name = "helloglium"
version = "0.1.0"
authors = ["rob <rob@improbable.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.25", default-features = true }
clipboard = "0.5"
imgui = "0.2.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.0"
image = "0.22"
glam = "0.8.6"
genmesh = "0.6"
obj = { version = "0.9", features = ["genmesh"] }
