[package]
name = "helloglium"
version = "0.1.0"
authors = ["rob <rob@improbable.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.26", default-features = true }
winit = "0.21.0"
glutin = "0.23.0"
clipboard = "0.5"
imgui = "0.3.0"
imgui-glium-renderer = "0.3.0"
imgui-winit-support = "0.3.0"
image = "0.22"
glam = "0.8.6"
genmesh = "0.6"
obj = { version = "0.9", features = ["genmesh"] }
physx = "0.5.1"
rand = "0.7.3"
specs = "0.16.1"
